--- a/index.html
+++ b/index.html
@@ -245,6 +245,9 @@
   <script id="template-tag-link" type="text/x-handlebars-template">
     <li><a href="#tag-{{ id }}">{{ id }}</a></li>
   </script>
+  <script id="template-author-link" type="text/x-handlebars-template">
+    by <a href="#author-{{ id }}">{{ id }}</a>
+  </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
   <script src="js/script.js"></script>
 </body>
