--- a/index.html
+++ b/index.html
@@ -253,7 +253,11 @@
       <li><a class= "{{ className }}" href="#tag-{{ tag }}">{{ tag }}</a></li>
     {{/each}}
   </script>
-  
+  <script id="template-author-aside-link" type="text/x-handlebars-template">
+    {{#each authors}}
+    <li><a href="#author-{{ author }}">{{ author }} ({{count}}) </a></li>
+    {{/each}}
+  </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
   <script src="js/script.js"></script>
 </body>
